[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Squares.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://themes/button.tres" type="Theme" id=2]
[ext_resource path="res://assets/UI/buttons/BackButton.png" type="Texture" id=3]
[ext_resource path="res://scripts/secret_settings.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[node name="secret_settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -634, -102 )
script = ExtResource( 4 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.976471, 0.952941, 0.352941, 1 )

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -342.5
margin_top = 50.0
margin_right = 342.5
margin_bottom = 156.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -342.5
margin_top = 305.0
margin_right = 342.5
margin_bottom = 411.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Available   cheats:
-F:   enable   fly
-I:   enable   immortality
-G:   go   to   a   specific   level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 64.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cheats_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -114.0
margin_right = 272.0
margin_bottom = -22.0
theme = ExtResource( 2 )
text = "Enable   cheats"

[node name="player_skin" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 92.0
margin_right = 20.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="cheats_button" to="." method="_on_cheats_button_pressed"]
